--- a/.github/workflows/merge-to-main.yaml
+++ b/.github/workflows/merge-to-main.yaml
@@ -1,4 +1,4 @@
-name: Confirm Resources are OK to deploy
+name: Promote the Dynateace Resources
 
 on:
   push:
@@ -41,8 +41,8 @@ jobs:
         run: |
           cd terraform
           terraform init
-          export DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_PROD_API_TOKEN }}
-          export DYNATRACE_ENV_URL: ${{ secrets.DYNATRACE_PROD_ENV_URL }}
+          export DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_PROD_API_TOKEN }}
+          export DYNATRACE_ENV_URL=${{ secrets.DYNATRACE_PROD_ENV_URL }}
           terraform plan -out ../plan.out
           cd ..
           ./scripts/check_terraform_plan.sh
