--- a/.github/workflows/pr-to-main.yaml
+++ b/.github/workflows/pr-to-main.yaml
@@ -46,8 +46,8 @@ jobs:
         run: |
           cd terraform
           terraform init
-          export DYNATRACE_API_TOKEN: ${{ secrets.DYNATRACE_PROD_API_TOKEN }}
-          export DYNATRACE_ENV_URL: ${{ secrets.DYNATRACE_PROD_ENV_URL }}
+          export DYNATRACE_API_TOKEN=${{ secrets.DYNATRACE_PROD_API_TOKEN }}
+          export DYNATRACE_ENV_URL=${{ secrets.DYNATRACE_PROD_ENV_URL }}
           terraform plan -out ../plan.out
           cd ..
           ./scripts/check_terraform_plan.sh
