--- a/.github/workflows/merge-to-main.yaml
+++ b/.github/workflows/merge-to-main.yaml
@@ -22,6 +22,10 @@ jobs:
           role-to-assume: ${{ secrets.DT_GH_ACTIONS_PROD_ROLE_ARN }}
           aws-region: eu-west-2
           role-duration-seconds: 1800
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.4
       - name: Validate Terraform
         run: |
           cd terraform
